   was overriding all other contributions of the current group:
     - seashell3D
     - clifford_js
     - post_depth
 - fixed the naming of some parameters (i.e., replaced spaces by underscore) of the following variations:
     - atan2_spirals
     - seashell3D
     - inverted_julia variation
 - fixed the following variations in order to correctly support the "Preserve Z"-setting:
     - bsplit
 - improved the gnarl-random-flame-generators to also use waves22, waves23, waves42 and vibration2 to create more interesting variations of the standard-gnarls
 - omitting empty motion curves when writing flames to file or clipboard

 - new variations:
   - ovoid by Rob Richards
   - post_point_crop by Whittaker Courtney
   - hole

  - new family of variations by Jesus Sosa: Symmetries band & network groups variations
     - Symmetry Band Groups 1 to 7 variations: sym_bg1, sym_bg2, sym_bg3, sym_bg4, sym_bg5, sym_bg6, sym_bg7
     - Symmetry Network Group 1 to 17 variations: sym_ng1, sym_ng2, sym_ng3, sym_ng4, sym_ng5, sym_ng6, sym_ng7, sym_ng8, sym_ng9, sym_ng10,
       sym_ng11, sym_ng12, sym_ng13, sym_ng14, sym_ng15, sym_ng16, sym_ng17.

V6.50 (11.04.2021)
 - Introducing variation-filters, based on variation-profiles and variation-types.
   They will improve usability a lot by simplifying the selection of variations/"plugins" by selecting
   and combining variation-types.
   The variation-types are internally defined and connected to the variation by the variation author.
   A variation may have any number of variation-types. e.g. "blur3d" is both of type BLUR and 3D.
   Profiles are not restricted to the use of variation-types, you may also create profile containing a list of any variations.
   For example. you can create a profile which contains well-proved variations to use inside a splits-elliptic-setup.
   You can also exclude variations.
   You may combine up to two profiles. E.g. to combine your own profile with the internal categories, like "Baseshape".